 - fix units switching team-colors
 - fix debug-vectors for ground units being drawn even when not cheating or not spectating
 - fix LoadScreen exception being thrown just for failing to load a startpic
 - fix crash in Spring.GetVisibleUnits on bad teamID value
 - fix C stack overflow in Shard
 - fix logLevel of WatchDog stacktraces
 - fix decals were rendered twice
 - fix spike CEGs

-- 94.1 ---------------------------------------------------------
 - bump path cache version

-- 94.0 ---------------------------------------------------------
Misc:
 - default LogFlush to true again
 - fix crash at start related to Optimus
 ! remove Tobis rapid client (its broken)
 - add multi engine type support
 - recycle unit and feature ID's less quickly again, a la 91.0 and prior
   although this was an unintentional change in 92.* / 93.*, it exposed
   many bugs in widgets and gadgets which INCORRECTLY assumed ID's were
   globally unique for all time --> check your code for more latent bugs

Rendering:
 - automatic runtime recompression of groundtextures to ETC1 (future MESA drivers should support ETC)

Bugfixes:
 - fix #3591 (UnitFromFactory(..., userOrders) always passes userOrders=false)
 - fix #3561 (units getting stuck on edges of impassable areas --> pathing is no longer FUBAR)
 - fix #3575 (QTPFS terrain deformation lagspikes)
 - fix #3580 (decreased unit/feature ID randomness)
 - fix #3557 (TorpedoLauncher weapon fires only when on land)
 - fix #3564 (sun-flare visible when obscured by terrain)
 - fix #3553 (sun-flare has harsh edge)
 - fix #3562 (units are reluctant to fire in crowded situations after 'fix #3488')
 - fix #3559 (avoidGround weapon tag is broken)
 - fix #3563 (units rub against building edges and slow down to a crawl) and #3592 related to it
 - fix #3567 (transported nanotowers periodically teleporting to ground)
 - fix #3520 (kamikaze units always have bad attack cursor when giving manual attack command)